Use FlaskApp now
- This is *much* simpler; hooray!
